test/libyul/yulSyntaxTests/objects/subobject_bin_name.yul
object "A" {
  code {}
  object bin"00111100" {
    code {}
  }
}
// ----
// ParserError 2314: (32-45): Expected 'StringLiteral' but got 'BinStringLiteral'
